[gd_scene load_steps=25 format=2]

[ext_resource path="res://assets/assets-plataforma/Personagens/Enemy01/fly01.png" type="Texture" id=1]
[ext_resource path="res://assets/assets-plataforma/Personagens/Enemy01/fly06.png" type="Texture" id=2]
[ext_resource path="res://assets/assets-plataforma/Personagens/Enemy01/fly03.png" type="Texture" id=3]
[ext_resource path="res://assets/assets-plataforma/Personagens/Enemy01/fly04.png" type="Texture" id=4]
[ext_resource path="res://assets/assets-plataforma/Personagens/Enemy01/fly07.png" type="Texture" id=5]
[ext_resource path="res://assets/assets-plataforma/Personagens/Enemy01/fly05.png" type="Texture" id=6]
[ext_resource path="res://assets/assets-plataforma/Personagens/Enemy01/fly02.png" type="Texture" id=7]
[ext_resource path="res://assets/assets-plataforma/Personagens/Enemy01/attack02.png" type="Texture" id=8]
[ext_resource path="res://assets/assets-plataforma/Personagens/Enemy01/hit02.png" type="Texture" id=9]
[ext_resource path="res://assets/assets-plataforma/Personagens/Enemy01/hit03.png" type="Texture" id=10]
[ext_resource path="res://assets/assets-plataforma/Personagens/Enemy01/attack01.png" type="Texture" id=11]
[ext_resource path="res://assets/assets-plataforma/Personagens/Enemy01/hit01.png" type="Texture" id=12]
[ext_resource path="res://assets/assets-plataforma/Personagens/Enemy01/attack04.png" type="Texture" id=13]
[ext_resource path="res://assets/assets-plataforma/Personagens/Enemy01/attack05.png" type="Texture" id=14]
[ext_resource path="res://assets/assets-plataforma/Personagens/Enemy01/attack06.png" type="Texture" id=15]
[ext_resource path="res://assets/assets-plataforma/Personagens/Enemy01/attack03.png" type="Texture" id=16]
[ext_resource path="res://assets/assets-plataforma/Personagens/Enemy01/attack07.png" type="Texture" id=17]
[ext_resource path="res://assets/assets-plataforma/Personagens/Enemy01/attack10.png" type="Texture" id=18]
[ext_resource path="res://assets/assets-plataforma/Personagens/Enemy01/attack09.png" type="Texture" id=19]
[ext_resource path="res://assets/assets-plataforma/Personagens/Enemy01/attack08.png" type="Texture" id=20]
[ext_resource path="res://Scripts/PlataformEnemy.gd" type="Script" id=21]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Enemy_Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 8 ), ExtResource( 16 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 17 ), ExtResource( 20 ), ExtResource( 19 ), ExtResource( 18 ) ],
"loop": true,
"name": "Enemy_Attack",
"speed": 15.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 2 ), ExtResource( 5 ) ],
"loop": true,
"name": "Enemy_Move",
"speed": 12.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "Enemy_Hit",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 8.57143
height = 0.0

[sub_resource type="CircleShape2D" id=3]
radius = 8.57143

[node name="PlataformEnemy1" type="KinematicBody2D"]
position = Vector2( 0, -1 )
scale = Vector2( 0.7, 0.7 )
script = ExtResource( 21 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Enemy_Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="MovementTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="HitTimer" type="Timer" parent="."]
one_shot = true

[node name="Area2D" type="Area2D" parent="."]

[node name="WeakPoint" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[connection signal="timeout" from="MovementTimer" to="." method="_on_MovementTimer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="HitTimer" to="." method="_on_HitTimer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
